discussion/kv_engine/155176/155176_rev13_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46729: Don't use the bucket logger from executor

Remove the binding to the bucket logger from the executor as it
is running in the core.

Change-Id: I984ef9374fb46ea181c38eec01698b82587c5f60

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-11 04:48:26.000000000
Message: 
Uploaded patch set 13: Patch Set 12 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 06:21:05.000000000
Message: 
Patch Set 13: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36710/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0000/0005]: checkpoint: create a new checkpoint.....\kv_engine\engines\ep\tests\ep_testsuite_checkpoint.cc:35 Test failed: `" (Expected `0", got `1" - Last closed checkpoint Id for VB 0 should still be 0 after storing 5 items)
(5530 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36710/ )

Failure of GoogleTest "PersistentAndEphemeral/ConnectionTest.consumer_get_error_map/4":

<pre>
[ RUN      ] PersistentAndEphemeral/ConnectionTest.consumer_get_error_map/4
unknown file: error: C++ exception with description "cb::io::rmrf: remove of file \\?\C:\Jenkins\workspace\kv_engine-windows-master\build\kv_engine\ep_engine_ep_unit_tests.db\test.588501\magma.1\wal\wal.1 under ep_engine_ep_unit_tests.db/test.588501 failed: The data is invalid." thrown in TearDown().
[  FAILED  ] PersistentAndEphemeral/ConnectionTest.consumer_get_error_map/4, where GetParam() = ("persistentMagma", "value_only") (78 ms)
PersistentAndEphemeral/ConnectionTest.consumer_get_error_map/4
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36710/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9748/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/configuration.h:179:10: error: "generated_configuration.h" file not found [clang-diagnostic-error]
#include "generated_configuration.h" // NOLINT(*)
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/logger/logger.h:28:10: error: "spdlog/fmt/ostr.h" file not found [clang-diagnostic-error]
#include <spdlog/fmt/ostr.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9748/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/configuration.h:179:10:
error: "generated_configuration.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9748/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19325/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8342/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/272/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31377/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11470/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10394/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11322/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11747/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-11 07:59:03.000000000
Message: 
Patch Set 13: Verified+1

The change does not start to include the file
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-11 07:59:05.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
